--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,8 +4,19 @@
  * work well for content-centric websites.
  */
 
-/* You can override the default Infima variables here. */
+/* Override the default Infima variables */
 :root {
+  --ifm-color-primary: #D91E5C;
+  --ifm-color-primary-dark: #c11b52;
+  --ifm-color-primary-darker: #ad184a;
+  --ifm-color-primary-darkest: #8c143c;
+  --ifm-color-primary-light: #e33e75;
+  --ifm-color-primary-lighter: #e75889;
+  --ifm-color-primary-lightest: #f182a7;
+  --ifm-code-font-size: 95%;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  /* Old (default) colors for reference:
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
@@ -13,12 +24,21 @@
   --ifm-color-primary-light: #33925d;
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  */
 }
 
-/* For readability concerns, you should choose a lighter palette in dark mode. */
+/* Dark mode: pick a lighter palette for readability */
 [data-theme='dark'] {
+  --ifm-color-primary: #ff4f87;
+  --ifm-color-primary-dark: #e64579;
+  --ifm-color-primary-darker: #d13e6d;
+  --ifm-color-primary-darkest: #a83158;
+  --ifm-color-primary-light: #ff6699;
+  --ifm-color-primary-lighter: #ff80aa;
+  --ifm-color-primary-lightest: #ff9bbc;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+
+  /* Old (default) colors for reference:
   --ifm-color-primary: #25c2a0;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
@@ -26,5 +46,5 @@
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  */
 }
